tests/ui/parser/keyword-final.rs
fn main() {
    let final = (); //~ ERROR expected identifier, found reserved keyword `final`
}

// ferrocene-annotations: fls_lish33a1naw5
// Keywords
//
// ferrocene-annotations: fls_cbsgp6k0qa82
// Reserved Keywords
